further bug fix

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -162,8 +162,9 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=True
+CleanShutdown=False
 OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ConveyorBelt.ConveyorBelt
+OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
 
 [RootWindow]
 ScreenPosition=X=124.667 Y=72.667
@@ -1038,11 +1039,11 @@ StaticMeshEditor.TimeStamp=2022.05.04-23.54.07
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem1=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem2=/Game/PuzzleBP/Blueprints/Cube
-MRUItem3=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem4=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem1=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem2=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem3=/Game/PuzzleBP/Blueprints/Cube
+MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
 MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
 MRUItem6=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube
 MRUItem7=/Game/ParticleFX/spraySystem
