Updated Conveyor Belt Blueprint
New belt is much smoother, has invis walls to stop boxes falling off

--- a/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Unreal Engine Files/Alan/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -102,6 +102,7 @@ PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 LastExecutedPlayModeLocation=PlayLocation_CurrentCameraLocation
 NewWindowWidth=1920
 NewWindowHeight=1080
+MultipleInstancePositions=(X=0,Y=0)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -162,13 +163,11 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/PuzzleBP/Maps/GameEnvironment
 
 [AssetEditorSubsystem]
-CleanShutdown=False
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/ConveyorBelt.ConveyorBelt
-OpenAssetsAtExit=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner
+CleanShutdown=True
 
 [RootWindow]
-ScreenPosition=X=124.667 Y=72.667
-WindowSize=X=1273.333 Y=665.333
+ScreenPosition=X=124.000 Y=72.000
+WindowSize=X=1273.000 Y=665.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -185,11 +184,11 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
+UNR=E:/Team_Project_and_Professionalism/Repo/ProjectAlan/Unreal Engine Files/Alan/Content/PuzzleBP/Maps
 BRUSH=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBX=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 FBXAnim=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
-GenericImport=C:/Users/olive/OneDrive - Northumbria University - Production Azure AD/Year 3/Team Project and Professionalism/Models/Alan Floor area.fbx
+GenericImport=E:/Team_Project_and_Professionalism/Repo/ProjectAlan/src/fbx/160323/ALAN CRT.fbx
 GenericExport=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 GenericOpen=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
 GenericSave=E:/Documents/GitHub/ProjectAlan/Unreal Engine Files/Alan/Content/
@@ -1039,26 +1038,26 @@ StaticMeshEditor.TimeStamp=2022.05.04-23.54.07
 StaticMeshEditor.LastCompileMethod=Unknown
 
 [ContentBrowserRecent]
-MRUItem0=/Game/PuzzleBP/Blueprints/BoxSpawner
-MRUItem1=/Game/PuzzleBP/Blueprints/ConveyorBelt
-MRUItem2=/Game/PuzzleBP/Blueprints/BoxChecker
-MRUItem3=/Game/PuzzleBP/Blueprints/Cube
-MRUItem4=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
-MRUItem5=/Game/PuzzleBP/Blueprints/ALAN
-MRUItem6=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube
-MRUItem7=/Game/ParticleFX/spraySystem
-MRUItem8=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
-MRUItem9=/Game/PuzzleBP/Blueprints/Box_Bp
-MRUItem10=/Game/Audio/Cylinder_Blueprint
-MRUItem11=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
-MRUItem12=/Game/Audio/Success_Beep/success_beep_Cue
-MRUItem13=/Game/ParticleFX/AlanRings/ringsSystem
-MRUItem14=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
-MRUItem15=/Engine/EditorBlueprintResources/StandardMacros
-MRUItem16=/Game/Audio/Music/alanbgmv3_Cue
-MRUItem17=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
-MRUItem18=/Game/Materials/ALANScreen
-MRUItem19=/Game/Materials/CGreen
+MRUItem0=/Game/Materials/crt
+MRUItem1=/Game/PuzzleBP/Blueprints/MainConveyor
+MRUItem2=/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay
+MRUItem3=/Game/PuzzleBP/Blueprints/BoxSpawner
+MRUItem4=/Game/PuzzleBP/Blueprints/ConveyorBelt
+MRUItem5=/Game/PuzzleBP/Blueprints/BoxChecker
+MRUItem6=/Game/PuzzleBP/Blueprints/Cube
+MRUItem7=/Game/PuzzleBP/Blueprints/ALAN
+MRUItem8=/Game/Geometry/Meshes/Electrical_panel_Sign_Cube
+MRUItem9=/Game/ParticleFX/spraySystem
+MRUItem10=/Game/PuzzleBP/Blueprints/Cylinder_Blueprint
+MRUItem11=/Game/PuzzleBP/Blueprints/Box_Bp
+MRUItem12=/Game/Audio/Cylinder_Blueprint
+MRUItem13=/Game/Audio/Fail_Beep/497710__miksmusic__hi-tech-error-alert-1__fail_beep__Cue
+MRUItem14=/Game/Audio/Success_Beep/success_beep_Cue
+MRUItem15=/Game/ParticleFX/AlanRings/ringsSystem
+MRUItem16=/Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel
+MRUItem17=/Engine/EditorBlueprintResources/StandardMacros
+MRUItem18=/Game/Audio/Music/alanbgmv3_Cue
+MRUItem19=/Game/PuzzleBP/Blueprints/CommandInterface/IORail2_IOconnectBox_001_Blueprint
 
 [DetailCategories]
 PuzzleBlock_C.Tick=True
@@ -2397,6 +2396,15 @@ RectLightComponent.Cooking=True
 MeshMergingSettingsObject.MeshSettings=True
 MeshMergingSettingsObject.MaterialSettings=True
 MeshMergingSettingsObject.LandscapeCulling=True
+MainConveyor_C.TransformCommon=True
+MainConveyor_C.Default=True
+MainConveyor_C.Rendering=True
+MainConveyor_C.Replication=True
+MainConveyor_C.Collision=True
+MainConveyor_C.Input=True
+MainConveyor_C.Actor=True
+MainConveyor_C.Tick=True
+MaterialExpressionVertexColor.MaterialExpression=True
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -2460,6 +2468,7 @@ MRUItem6=/Game/StarterContent/Maps/StarterMap
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
 bUseUnsortedMenus=False
+bShowGrid=False
 
 [LightingBuildOptions]
 OnlyBuildSelected=False
@@ -2521,7 +2530,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/PuzzleBP/Maps/GameEnvironment.GameEnvironment:PersistentLevel.GameEnvironment=1
 /Game/PuzzleBP/Blueprints/CommandInterface/ControlPanel.ControlPanel=1
 /Game/PuzzleBP/Blueprints/CommandInterface/MoodEnum.MoodEnum=1
-/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay=1
+/Game/PuzzleBP/Blueprints/CommandInterface/OutputDisplay.OutputDisplay=0
 /Game/PuzzleBP/Blueprints/CommandInterface/InputEnum.InputEnum=1
 /Game/StarterContent/Materials/M_Metal_Chrome.M_Metal_Chrome=1
 /Game/PuzzleBP/Blueprints/PuzzleBlockGrid.PuzzleBlockGrid=1
@@ -2567,8 +2576,15 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 /Game/ParticleFX/AlanRings/ringsSystem.ringsSystem=1
 /Game/PuzzleBP/Blueprints/Cylinder_Blueprint.Cylinder_Blueprint=1
 /Game/Geometry/Meshes/Electrical_panel_Sign_Cube.Electrical_panel_Sign_Cube=1
+/Game/PuzzleBP/Blueprints/MainConveyor.MainConveyor=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Geometry/Meshes/ALAN_CRT_Head.ALAN_CRT_Head;
+RecentlyPlaced=/Game/Geometry/Meshes/ALAN_CRT_ArmR.ALAN_CRT_ArmR;
+RecentlyPlaced=/Game/Geometry/Meshes/ALAN_CRT_ArmL.ALAN_CRT_ArmL;
+RecentlyPlaced=/Game/Geometry/Meshes/ALAN_CRT_ALANEX.ALAN_CRT_ALANEX;
+RecentlyPlaced=/Game/PuzzleBP/Blueprints/Cube.Cube;
+RecentlyPlaced=/Game/PuzzleBP/Blueprints/MainConveyor.MainConveyor;
 RecentlyPlaced=/Game/PuzzleBP/Blueprints/BoxSpawner.BoxSpawner;
 RecentlyPlaced=/Game/Geometry/Meshes/AlanFloorPlane.AlanFloorPlane;
 RecentlyPlaced=/Game/Geometry/Meshes/Alan_Floor_area_Plane_003.Alan_Floor_area_Plane_003;
@@ -2583,12 +2599,6 @@ RecentlyPlaced=/Game/StarterContent/Props/SM_Bush.SM_Bush;
 RecentlyPlaced=/Game/StarterContent/Shapes/Shape_QuadPyramid.Shape_QuadPyramid;
 RecentlyPlaced=/Game/StarterContent/Props/SM_MatPreviewMesh_02.SM_MatPreviewMesh_02;
 RecentlyPlaced=/Game/StarterContent/Props/SM_CornerFrame.SM_CornerFrame;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Rock.SM_Rock;
-RecentlyPlaced=/Game/StarterContent/Props/SM_Lamp_Wall.SM_Lamp_Wall;
-RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
-RecentlyPlaced=/Script/Engine.RectLight;/Engine/Transient.ActorFactoryRectLight_0
-RecentlyPlaced=/Script/Engine.SpotLight;/Engine/Transient.ActorFactorySpotLight_0
-RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 
 [PluginBrowser]
 InstalledPlugins=XRVisualization
@@ -2611,7 +2621,7 @@ SceneComponent=
 ActorComponent=
 PreviewMaterial="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 Material="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
-MaterialInterface=
+MaterialInterface="\"Object.PhysicalMaterialMask.PhysicalMaterialMap\" \"Object.Group Sorting.ParameterGroupData\" \"Object.Lightmass.LightmassSettings\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
@@ -2672,6 +2682,7 @@ SoundNodeDistanceCrossFade="\"Object.CrossFade.CrossFadeInput\" \"Object.CrossFa
 SoundNode=
 AudioComponent="\"Object.Tags.ComponentTags\" "
 Cylinder_Blueprint_C=
+MainConveyor_C=
 
 [MaterialEditor]
 PrimType=1
@@ -2903,7 +2914,7 @@ PreserveScaleRatio=False
 SkeletalMeshComponent=
 MaterialEditorInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
 MaterialInstanceConstant=MaterialEditorInstanceConstant.ParameterGroups.Global Scalar Parameter Values,MaterialEditorInstanceConstant.ParameterGroups.Global Vector Parameter Values,MaterialEditorInstanceConstant.General.MaterialPropertyOverrideGroup,
-StaticMeshComponent=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
+StaticMeshComponent=
 ControlPanel_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,
 PropertyWrapper=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 K2Node_VariableGet=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
@@ -2980,7 +2991,7 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings.ResetVR,InputSettings.Bindings.ActionMappings.TriggerClick,InputSettings.Bindings.ActionMappings,IOSRuntimeSettings.Build.Remote Build Options,InputSettings.Bindings.ActionMappings.Control Panel,
-SceneComponent=
+SceneComponent=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 PuzzleBlock_C=
 PuzzleBlockGrid_C=
 BP_Sky_Sphere_C=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
@@ -3014,6 +3025,7 @@ PrimitiveComponent=SkeletalMeshComponent.Collision.Collision,StaticMeshActor.Phy
 spraySystemBP_C=StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,SkeletalMeshComponent.Collision.Collision,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,
 K2Node_MakeStruct=K2Node_MakeStruct.PinOptions.ShowPinForProperties,
 Cylinder_Blueprint_C=
+MainConveyor_C=SkeletalMeshComponent.Collision.Collision,PropertyWrapper.DefaultValueCategory.None,K2Node_VariableGet.DefaultValueCategory.None,StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.RayTracing,StaticMeshComponent.Rendering.LOD,StaticMeshActor.Physics.ConstraintsGroup,StaticMeshActor.Rendering.TextureStreaming,StaticMeshActor.Rendering.RayTracing,StaticMeshActor.Rendering.LOD,
 
 [DetailMultiObjectNodeExpansion]
 CryptoKeysSettings=True
